# GL_Portal

./: .gitmodules  CMakeLists.txt  README.md
include/app/: App.h  Camera.h  Controls.h  DebugUI.h  Input.h  Window.h
include/portal/: Cell.h  Portal.h  Scene.h
include/render/: AdaptiveFramebuffer.h  FramebufferUtils.h  PortalRenderer.h  Renderer.h
include/shape/: GLShape.h  Mesh.h  ModelShape.h  PortalQuad.h  Skybox.h  Texture.h  TexturedBox.h  TexturedQuad.h
include/util/: GLUtils.h  ResourceCache.h  SceneManager.h  Shader.h  ShaderStore.h
src/: main.cpp
src/app/: App.cpp  Camera.cpp  Controls.cpp  DebugUI.cpp  Input.cpp  Window.cpp
src/portal/: Scene.cpp
src/render/: AdaptiveFramebuffer.cpp  PortalRenderer.cpp  Renderer.cpp
src/shader/: flat.frag.glsl  flat.vert.glsl  phong.frag.glsl  phong.vert.glsl  portal_quad.frag.glsl  portal_quad.vert.glsl  textured.frag.glsl  textured.vert.glsl
src/shape/: Mesh.cpp  ModelShape.cpp  PortalQuad.cpp  Skybox.cpp  Texture.cpp  TexturedBox.cpp  TexturedQuad.cpp
